+ New, more advanced crafting system (TUTORIAL COMING SOON!) + Support with most (if not all) Combat Logging plugins + PlaceHolderAPI Support + Heart Shard system